Update GIF guide to add Bookmarklet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Xếp hạng bạn bè trên Facebook</h1>
-        <h2>1 tiện ích nhỏ (bookmarklet) giúp người dùng tự kiểm tra xếp hạng bạn bè trên Facebook.</h2>
+        <h2>Tiện ích nhỏ (bookmarklet) giúp người dùng tự kiểm tra xếp hạng bạn bè trên Facebook.</h2>
         <a href="https://github.com/karmiphuc/fb-friends-bookmarklet" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -31,6 +31,7 @@
 <h4>Hướng dẫn sử dụng</h4>
 
 <p><ol><li>Nhấn và giữ phím chuột vào 1 trong 2 liên kết bên dưới.</li><li>Kéo chuột vào thanh bookmark của trình duyệt.</li></ol></p>
+<p><img src="https://i.imgur.com/CGQWC30.gif"></p>
 
 <p><ul>
 <li><strong>Phiên bản đơn giản (nhanh chóng):</strong><br/>
