--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<h4>Hướng dẫn sử dụng</h4>
+<h4>Hướng dẫn sử dụng (<a href="https://i.imgur.com/CGQWC30.gif" target="_blank">video</a>)</h4>
 
 <p><ol><li>Nhấn và giữ phím chuột vào 1 trong 2 liên kết bên dưới.</li><li>Kéo chuột vào thanh bookmark của trình duyệt.</li></ol></p>
-<p><img src="https://i.imgur.com/CGQWC30.gif"></p>
 
 <p><ul>
 <li><strong>Phiên bản đơn giản (nhanh chóng):</strong><br/>
@@ -44,12 +43,17 @@
 
 <hr>
 
-<h4>Reference</h4>
+<h4>Tham khảo</h4>
 
 <ul>
-<li><a href="http://karmiphuc.com/cong-nghe/xep-hang-ban-be-tren-facebook/">http://karmiphuc.com/cong-nghe/xep-hang-ban-be-tren-facebook/</a>
+  <li><a href="https://www.facebook.com/phucnn">Tác giả Karmi Phúc</a>
+</li>
+<li><a href="http://karmiphuc.com/cong-nghe/xep-hang-ban-be-tren-facebook/">Bài viết http://karmiphuc.com/cong-nghe/xep-hang-ban-be-tren-facebook/</a>
+</li>
+<li><a href="https://github.com/karmiphuc/fb-friends-bookmarklet/issues/new">Báo lỗi/Góp ý</a>
 </li>
 </ul>
+
         </section>
 
         <aside id="sidebar">
