--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="fb:admins" content="100000023814639"/>
+    <meta property="fb:app_id" content="542398892474873"/>
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
@@ -14,6 +16,13 @@
     <![endif]-->
 
     <title>Facebook Friend Ranking bookmarklet by karmiphuc</title>
+    
+    <meta property="og:title" content="Tiện ích Xếp hạng bạn bè trên Facebook"/>
+    <meta property="og:description" content="Tiện ích nhỏ (bookmarklet) giúp người dùng tự kiểm tra xếp hạng bạn bè trên Facebook"/>
+    <meta property="og:url" content="https://karmiphuc.github.io/fb-friends-bookmarklet/"/>
+    <meta property="og:site_name" content="Facebook Friend Ranking bookmarklet"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://i.imgur.com/vJxJ4gm.png"/>
   </head>
 
   <body>
